<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_camera_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_feed_search_24"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_upload_list"
            android:icon="@drawable/ic_gallery_black_24dp"
            android:title="@string/upload_list_title" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_gallery_black_24dp"
            android:title="@string/nav_upload_from_folder" />
        <item
            android:id="@+id/nav_batch_delete"
            android:icon="@drawable/ic_feed_menu_24"
            android:title="@string/nav_batch_delete" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_user" />
    </group>
</menu>